@@ -34,7 +34,8 @@ axis(side, at = NULL, labels = TRUE, tick = TRUE, line = NA,
     drawn in the outer plot margin, rather than the standard plot
     margin.}
   \item{font}{font for text.}
-  \item{vfont}{vector font for text.}
+  \item{vfont}{vector font for text.  Deprecated: will give a message
+    to use \code{\link{par}(family=)} instead (and do nothing).}
   \item{lty, lwd}{line type, width for the axis line and the tick marks.}
   \item{col}{color for the axis line and the tick marks.  The default
     \code{NULL} means to use \code{par("fg")}.}
